--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@fortawesome/fontawesome-free": "^6.0.0",
+    "@ngrx/effects": "^16.1.0",
     "@ngrx/store": "^16.1.0",
     "chart.js": "^3.1.1",
     "connect": "^3.7.0",
